fix about spacing

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -51,8 +51,9 @@
 
 @media (min-width: 689px) and (max-width: 992px) {
   .container {
+    height: 90vh;
     align-items: center;
-    padding: 0 5%;
+    padding: 8% 5% 0 5%;
   }
 
   .content {
